2010-09-15  Kai Tietz  <kai.tietz@onevision.com>

       * config/obj-coff-seh.h (seh_context): New member code_seg.
       * config/obj-coff-seh.c: Implementing xdata/pdata section cloning
       for link-once code-segment.

2010-09-14  Jie Zhang  <jie@codesourcery.com>

	* doc/c-arm.texi: Document -mcpu=cortex-m4.

2010-09-09  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_vex_prefix): Check VEXW1 for 2-byte
	VEX prefix.

2010-09-09  Joseph Myers  <joseph@codesourcery.com>

	* doc/c-tic6x.texi (.c6xabi_attribute): Document directive.

2010-09-09  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* config/tc-arm.c (arm_cpus): Add cortex-a15 entry.
	* doc/c-arm.texi: Document -mcpu=cortex-a15.

2010-09-09  Gunther Nikl  <gnikl@users.sourceforge.net>

	* gas/config/tc-m68k.c (tc_gen_reloc): Handle references to defined
	weak symbols first if generating an a.out object.

2010-09-09 Tejas Belagod  <tejas.belagod@arm.com>

	* config/tc-arm.c (md_apply_fix): Check if widened add, sub are
	flag-setting and handle accordingly.

2010-09-09  Nick Clifton  <nickc@redhat.com>

	PR gas/11972
	* config/tc-arm.c (parse_big_immediate): Allow for bignums being
	extended to the size of a .octa.

2010-09-08  Julian Brown  <julian@codesourcery.com>

	* config/tc-arm.c (create_neon_reg_alias): Deal with case
	sensitivity.

2010-09-08  Nick Clifton  <nickc@redhat.com>

	PR gas/11973
	* config/tc-mn10300.c (md_convert_frag): Zero out top two bytes of
	long call instruction's displacement.

2010-09-03  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/11974
	* config/tc-i386.c (i386_finalize_immediate): Check flag_code
	instead of use_rela_relocations for 64bit.

2010-09-02  Richard Henderson  <rth@redhat.com>

	* dw2gencfi.c (TC_DWARF2_EMIT_OFFSET): Provide default.
	(output_fde): Use it.  Make sure to fully init exp before using it.

2010-08-31  Kai Tietz  <kai.tietz@onevision.com>

	* config/obj-coff-seh.c (obj_coff_seh_save): Correct comparison.