@@ -40,7 +40,7 @@ run_dump_test "section-align-3"
 
 # These tests are only for x86_64 targets
 if ([istarget "x86_64-*-mingw*"]) then {
-
+	run_list_test "seh-x64-err-1" ""
 	run_dump_test "peseh-x64"
 	run_dump_test "peseh-x64-2"
 	run_dump_test "peseh-x64-3"
