@@ -1,0 +1,24 @@
+.*: Assembler messages:
+.*:5: Error: .seh_endproc used without .seh_proc
+.*:6: Error: .seh_stackalloc used outside of .seh_proc block
+.*:7: Error: .seh_setframe used outside of .seh_proc block
+.*:8: Error: .seh_endprologue used outside of .seh_proc block
+.*:9: Error: .seh_pushreg used outside of .seh_proc block
+.*:10: Error: .seh_savereg used outside of .seh_proc block
+.*:11: Error: .seh_savexmm used outside of .seh_proc block
+.*:12: Error: .seh_handler used outside of .seh_proc block
+.*:13: Error: .seh_handler used outside of .seh_proc block
+.*:14: Error: .seh_handler used outside of .seh_proc block
+.*:15: Error: .seh_handler used outside of .seh_proc block
+.*:16: Error: .seh_handlerdata used outside of .seh_proc block
+.*:19: Error: .seh_proc requires function label name
+.*:23: Warning: .seh_eh ignored for this target
+.*:24: Warning: .seh_32 ignored for this target
+.*:25: Warning: .seh_no32 ignored for this target
+.*:33: Error: .seh_stackalloc used in segment '.data' instead of expected '.text'
+.*:34: Error: .seh_setframe used in segment '.data' instead of expected '.text'
+.*:35: Error: .seh_endprologue used in segment '.data' instead of expected '.text'
+.*:36: Error: .seh_pushreg used in segment '.data' instead of expected '.text'
+.*:37: Error: .seh_savereg used in segment '.data' instead of expected '.text'
+.*:38: Error: .seh_savexmm used in segment '.data' instead of expected '.text'
+.*:39: Error: .seh_endproc used in segment '.data' instead of expected '.text'
